--- a/src/app.less
+++ b/src/app.less
@@ -1,3 +1,8 @@
 body {
-    background-image: url('./images/bg.jpg')
+    background-color:#eee;
+}
+
+#canvas{
+    width: 1000px;
+    height:1000px;
 }
