--- a/template/index.html
+++ b/template/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Threejs Demo</title>
 </head>
-
 <body>
+    <div id="canvas"></div>
 </body>
-
 </html>
